# ord-infrastructure

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: checks.yml
account/: Pulumi.prod.yaml  __main__.py
app/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
backend/: Pulumi.yaml  __main__.py  requirements.txt
domain/: Pulumi.yaml  __main__.py
identity/: Pulumi.yaml  README.md  __main__.py
interface/: Pulumi.yaml  __main__.py
ord_infrastructure/: __init__.py  shared.py
pulumi/account/: __main__.py
pulumi/app/: __main__.py
pulumi/backend/: __main__.py
pulumi/domain/: __main__.py
pulumi/interface/: __main__.py
stacks/account/: Pulumi.yaml  README.md  __main__.py
stacks/app/: Pulumi.staging.yaml  Pulumi.yaml  README.md  __main__.py
stacks/auth/: Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py
stacks/backend/: Pulumi.yaml  README.md  __main__.py
stacks/database/: Pulumi.yaml  README.md  __main__.py
stacks/domain/: Pulumi.yaml  __main__.py
stacks/interface/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py
