# Copyright 2026 Open Reaction Database Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "ord-infrastructure"
version = "0.1.0"
description = "Pulumi infrastructure for the Open Reaction Database"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-aws>=7.0.0,<8.0.0",
    "pulumi-awsx>=3.0.0,<4.0.0",
    "pulumi-random>=4.0.0,<5.0.0",
    "ruff>=0.9.9",
    "ty>=0.0.28",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["**/venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modernize syntax)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # Line length is enforced by the formatter, not the linter.
    "SIM108",  # Ternary expressions are not always clearer than if/else.
    "B008",    # Function calls in argument defaults are fine for our use cases.
]

[tool.ty.src]
exclude = ["**/venv/**"]
